--- a/config.ini
+++ b/config.ini
@@ -6,4 +6,4 @@ iterations = 100_000
 gui = False
 ; top secret setting (True/False)
 clipboard_buffer = False
-; only works if you have clipboard history enabled
+; only works if you have clipboard history enabled (True/False)
